# caze-tools

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
caze_tools/: __init__.py  __main__.py  cli.py
caze_tools/commands/: __init__.py  addprefix.py  extractlog.py  lsstruct.py  merge.py  mkstruct.py  rename.py  toroot.py  trimimg.py
docs/: publicacao-pypi.md  publicacao-rapida.md
